--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-//    implementation project(path: ':parcellib')
-    implementation 'com.github.taptappub:Parcel:0.9.2'
+    implementation project(path: ':reactionlib')
+//    implementation 'com.github.taptappub:Parcel:0.9.2'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
