--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.taptap.parcel_test"
+        applicationId "taptap.parcel_test"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -41,7 +41,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation project(path: ':reactionlib')
-//    implementation 'com.github.taptappub:Parcel:0.9.2'
+//    implementation 'com.github.taptappub:Reaction:0.9.3'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
