--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,35 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+
+# ---------------------------Publish properties---------------------------
+GROUP=io.github.taptappub
+POM_ARTIFACT_ID=reaction
+VERSION_NAME=1.0.2
+
+POM_NAME=Reaction
+POM_DESCRIPTION=A class that encapsulates a successful result with a value of type [T] or a failure result with an [Throwable] exception
+POM_INCEPTION_YEAR=2021
+POM_URL=https://github.com/taptappub/Reaction/
+
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+
+POM_SCM_URL=https://github.com/taptappub/Reaction
+POM_SCM_CONNECTION=scm:git:git://github.com/taptappub/Reaction.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://github.com/taptappub/Reaction.git
+
+POM_DEVELOPER_ID=taptappub
+POM_DEVELOPER_NAME=Aleksey Potapov
+POM_DEVELOPER_URL=https://github.com/taptappub
+
+mavenCentralUsername=aTable7
+mavenCentralPassword=so8Typhus_pe
+
+signing.keyId=1120499F
+signing.password=Typhus1989
+signing.secretKeyRingFile=/Users/alexp/AndroidStudioProjects/Reaction/SecretRingKey.gpg
+ossrhUsername=aTable7
+ossrhPassword=so8Typhus_pe
